--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>The title of my page</title>
 
 </head>
-<img src="/Users/paul/Desktop/Cours /AlbertSchool/Hands on coding tools/Git/my_website/Img/gorillapose3_2.jpg" alt="mmmmh">
+<img src="/Users/paul/Desktop/Cours /AlbertSchool/Hands on coding tools/Git/my_website/Img/Image.png" alt="mmmmh">
 <body>
-    Quand le chat n'est pas la, les souris dansent !
+    GINGEMBRE
 
 </body>
 </html>
